# METAHACKATHON

./: Dockerfile  README.md  app.py  baseline.py  env.py  grader.py  inference.py  models.py  openenv.yaml  requirements.txt  ride_env.py  tasks.py
server/: app.py  baseline.py  inference.py  pyproject.toml
